@@ -1,3 +1,9 @@
+2010-09-11  Steve Kilbane  <steve.kilbane@analog.com>
+
+	* config/bfin-lex.l (FLAGS): New state.
+	(X, Z, S, M, T): Require FLAGS state.
+	("(", ")"): Start/stop FLAGS state.
+
 2010-09-11  David Gibson  <david.gibson@analog.com>
 
 	* config/bfin-aux.h (bfin_loop_attempt_create_label): New prototype.
